--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "dependencies": {
     "express": "^4.16.4",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
     "@types/node": "^12.0.0",
     "@types/react": "^16.8.16",
+    "@types/react-helmet": "^5.0.8",
     "concurrently": "^4.1.0",
     "gulp": "^4.0.1",
     "gulp-absolute-path": "^1.0.4",
