📥  chore: install emotion

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dev": "cleanup && build:server && concurrently --raw --kill-others && build:w && start:dev"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.10",
     "express": "^4.16.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
