--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.16.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "typescript": "^3.6.3"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
